--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "react-router-dom": "6.4.3"
   },
   "devDependencies": {
-    "vite": "latest",
-    "@vitejs/plugin-react": "*"
+    "@vitejs/plugin-react": "*",
+    "autoprefixer": "^10.4.14",
+    "miragejs": "^0.1.47",
+    "postcss": "^8.4.23",
+    "sass": "^1.62.0",
+    "tailwindcss": "^3.3.1",
+    "vite": "latest"
   },
   "scripts": {
     "start": "vite",
